--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     }, 
     "description": "A Cloudflare plugin for WordPress", 
     "license": "BSD-3-Clause", 
-    "name": "cloudflare/wordpress-plugin", 
+    "name": "juslintek/cloudflare", 
+    "type": "wordpress-plugin"
     "require": {
         "cloudflare/cf-ip-rewrite": "^1.0.0", 
         "cloudflare/cloudflare-plugin-backend": "^1.1", 
