--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "description": "A Cloudflare plugin for WordPress", 
     "license": "BSD-3-Clause", 
     "name": "juslintek/cloudflare", 
-    "type": "wordpress-plugin"
+    "type": "wordpress-plugin",
     "require": {
         "cloudflare/cf-ip-rewrite": "^1.0.0", 
         "cloudflare/cloudflare-plugin-backend": "^1.1", 
